# shatar

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
source/: AI.cpp  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Hash.cpp  Hash.h  HashTable.cpp  HashTable.h  Human.cpp  LegalMoveGen.cpp  LegalMoveGen.h  Move.cpp  Move.h  MoveList.cpp  MoveList.h  MoveMasks.h  MoveSort.cpp  MoveSort.h  Players.h  Position.cpp  Position.h  PseudoLegalMoveMaskGen.cpp  PseudoLegalMoveMaskGen.h  Static.cpp  Static.h  main.cpp
